fixed buttons too close

--- a/css/website-d7ec5a.webflow.css
+++ b/css/website-d7ec5a.webflow.css
@@ -255,6 +255,7 @@ svg {
 	line-height: 19px;
 	font-weight: 300;
 	text-transform: uppercase;
+	margin: 30px;
 }
 
 .button:hover {
